Corrected the link from announcements to about page

--- a/pages/announcements.html
+++ b/pages/announcements.html
@@ -90,7 +90,7 @@
                 </section>
             </div>
             <div class="footer-bottom">   
-                <p class="footer-copy">&copy;<a href="./pages/about.html">2025 TechSQUID</a></p>
+                <p class="footer-copy">&copy;<a href="./about.html">2025 TechSQUID</a></p>
             </div> 
         </footer>
         <script src="../index.js"></script>
