fixing light/dark mode in css

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
+        <meta name="color-scheme" content="light">
         <title>Maple Valley Girls in Tech</title>
         <link rel="stylesheet" href="./index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
