--- a/pages/about.html
+++ b/pages/about.html
@@ -13,7 +13,7 @@
     <body>
         <header>
             <div class="alert-bar" id="alertBar"> 
-                <span class="alert-text">Our fall programs are now open for registration!</span>
+                <span class="alert-text">The registration process for our Girls Who Code 10-class Web Development Course 2025 Fall season is currently: Open!</span>
                 <button class="close-btn" id="closeAlertBtn">X</button>   
             </div>
             <nav>
