--- a/pages/announcements.html
+++ b/pages/announcements.html
@@ -41,7 +41,10 @@
         <main>
             <section class="hero">
                 <div class="vision">
-                    <h1 class="vision-title">What's new.<br>What's next.</h1>
+                    <h1 class="vision-title">
+                        <span>What's new.</span>
+                        <span>What's next.</span>
+                    </h1>
                     <p class="vision-description">This season, TechSquid is proud to host two clubs - Girls Who Code and Technovation Girls. The students will explore technology, collaborate on projects, and lead change through creativity and code.
                     </p>
                     <div class="vision-cta">
