--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
     <head>
         <meta charset="UTF-8">
         <meta name="color-scheme" content="light">
+        <meta name="theme-color" content="#ffffff">
+        <!-- (Optional for older Safari) -->
+        <meta name="supported-color-schemes" content="light">
         <title>Maple Valley Girls in Tech</title>
         <link rel="stylesheet" href="./index.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
