--- a/technovation-girls.html
+++ b/technovation-girls.html
@@ -12,10 +12,10 @@
     </head>
     <body>
         <header>
-            <div class="alert-bar" id="alertBar"> 
+            <!-- <div class="alert-bar" id="alertBar"> 
                 <span class="alert-text">The registration process for our Girls Who Code 10-class Web Development Course 2025 Fall season is currently: Open!</span>
                 <button class="close-btn" id="closeAlertBtn">X</button>   
-            </div>
+            </div> -->
             <nav>
                 <div class="nav-inner">
                     <div class="logo">
