--- a/girls-who-code.html
+++ b/girls-who-code.html
@@ -12,10 +12,10 @@
     </head>
     <body>
         <header>
-            <!--<div class="alert-bar" id="alertBar"> 
-                <span class="alert-text">The registration process for our Girls Who Code 10-class Web Development Course 2025 Fall season is currently: Open!</span>
+            <div class="alert-bar" id="alertBar"> 
+                <span class="alert-text">The registration process for our Girls Who Code 5-day Workshop in p5.js "Create Your Own Portrait Using Code" 2026 Winter season is currently: Open!</span>
                 <button class="close-btn" id="closeAlertBtn">X</button>   
-            </div> -->
+            </div>
             <nav>
                 <div class="nav-inner">
                     <div class="logo">
