--- a/girls-who-code.html
+++ b/girls-who-code.html
@@ -89,8 +89,50 @@
                     </div>
                 </div>
             </section>
-            <div class="middle-section"></div>
+            <!-- Gallery -->
+            <div class="gallery-name">
+                <h2 class="gallery-h2">Gallery</h2>
+            </div>
+            <section class="gallery">
+                <div class="gallery-box">
+                    <img src="./images/img2.jpg" alt="girls sitting at the desks" class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img1.jpg" alt="girls sitting in a classroom" class="box"> 
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img3.jpg" alt="girls sitting in a classroom" class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img4.jpg" alt="girls sitting in a classroom" class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img5.jpg" alt="Girls Who Code team working on the code" class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img7.jpg" alt="Girls Who Code team learning about WiFi, cable and fiber networks" class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img8.jpg" alt="Girls Who Code team playing a game as an Icebreaker" class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img9.jpg" alt="Joke of the day: How did the program die? It was executed." class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img10.jpg" alt="Joke of the day: Programmers prefer dark mode because light attracts bugs." class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img11.jpg" alt="Girls Who Code team having fun." class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img12.jpg" alt="The girls' masterpieces." class="box">
+                </div>
+                <div class="gallery-box">
+                    <img src="./images/img13.jpg" alt="The snacks offered at the club." class="box">
+                </div>
+            </section>
             <!-- Winter - Spring GWC 2025 -->
+            <div class="middle-section"></div>
             <section class="bottom-section">
                 <div class="bottom-part">
                     <h2 class="gallery-h2">GWC 2025 Winter - Spring</h1>
