--- a/girls-who-code.html
+++ b/girls-who-code.html
@@ -95,41 +95,31 @@
             </div>
             <section class="gallery">
                 <div class="gallery-box">
-                    <img src="./images/img2.jpg" alt="girls sitting at the desks" class="box">
+                    <img src="./images/wd_0.jpg" alt="Class with funny faces" class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/img1.jpg" alt="girls sitting in a classroom" class="box"> 
+                    <img src="./images/wd_1.jpg" alt="Class learning HTML" class="box"> 
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/img3.jpg" alt="girls sitting in a classroom" class="box">
+                    <img src="./images/wd_2.jpg" alt="Faciltator presenting at white board" class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/img4.jpg" alt="girls sitting in a classroom" class="box">
+                    <img src="./images/wd_3.jpg" alt="The girls' work from a Sisterhood activity" class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/img5.jpg" alt="Girls Who Code team working on the code" class="box">
+                    <img src="./images/wd_4.jpg" alt="Girls playing a maze game" class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/img7.jpg" alt="Girls Who Code team learning about WiFi, cable and fiber networks" class="box">
+                    <img src="./images/wd_5.jpg" alt="An 'I love being a Girl who codes' paper" class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/img8.jpg" alt="Girls Who Code team playing a game as an Icebreaker" class="box">
+                    <img src="./images/wd_6.jpg" alt="Girls playing a maze game" class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/img9.jpg" alt="Joke of the day: How did the program die? It was executed." class="box">
+                    <img src="./images/wd_7.jpg" alt="A little girl who codes designing the layout of her webpage." class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/img10.jpg" alt="Joke of the day: Programmers prefer dark mode because light attracts bugs." class="box">
-                </div>
-                <div class="gallery-box">
-                    <img src="./images/img11.jpg" alt="Girls Who Code team having fun." class="box">
-                </div>
-                <div class="gallery-box">
-                    <img src="./images/img12.jpg" alt="The girls' masterpieces." class="box">
-                </div>
-                <div class="gallery-box">
-                    <img src="./images/img13.jpg" alt="The snacks offered at the club." class="box">
-                </div>
+                    <img src="./images/wd_last.jpg" alt="The whole Girls Who Code team" class="box">
             </section>
             <!-- Winter - Spring GWC 2025 -->
             <div class="middle-section"></div>
