--- a/girls-who-code.html
+++ b/girls-who-code.html
@@ -95,7 +95,7 @@
             </div>
             <section class="gallery">
                 <div class="gallery-box">
-                    <img src="./images/wd_0.jpg" alt="Class with funny faces" class="box">
+                    <img src="./images/wd_0.jpeg" alt="Class with funny faces" class="box">
                 </div>
                 <div class="gallery-box">
                     <img src="./images/wd_1.jpg" alt="Class learning HTML" class="box"> 
@@ -110,7 +110,7 @@
                     <img src="./images/wd_4.jpg" alt="Girls playing a maze game" class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/wd_5.jpg" alt="An 'I love being a Girl who codes' paper" class="box">
+                    <img src="./images/wd_5.jpeg" alt="An 'I love being a Girl who codes' paper" class="box">
                 </div>
                 <div class="gallery-box">
                     <img src="./images/wd_6.jpg" alt="Girls playing a maze game" class="box">
@@ -119,7 +119,7 @@
                     <img src="./images/wd_7.jpg" alt="A little girl who codes designing the layout of her webpage." class="box">
                 </div>
                 <div class="gallery-box">
-                    <img src="./images/wd_last.jpg" alt="The whole Girls Who Code team" class="box">
+                    <img src="./images/wd_last.jpeg" alt="The whole Girls Who Code team" class="box">
             </section>
             <!-- Winter - Spring GWC 2025 -->
             <div class="middle-section"></div>
